[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "Developed a Tic-Tac-Toe mobile app using Flet, featuring single-player (AI), two-player (local multiplayer), and replay functionality. Focused on creating a smooth, intuitive user experience while enhancing my skills in Flet and game logic. Always open to connecting and discussing mobile app development projects!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "tic-tac-toe"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"